# OmniDiff

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle_app.sh  create_icon.sh
.github/workflows/: release.yml
src/: app.rs  main.rs  scanner.rs
